--- a/launch-salt-cluster.yml
+++ b/launch-salt-cluster.yml
@@ -45,9 +45,32 @@
           Role: "{{ instance.role }}"
       register: instance_results
 
+    - name: Wait for Jenkins Instance to be accessible via SSM
+      ansible.builtin.wait_for:
+        host: "{{ instance_results.results[1].instances[0].public_dns_name }}"
+        port: 8080
+        state: started
+
+    - name: Retrieve initialAdminPassword via SSM
+      shell: |
+        aws ssm send-command \
+          --document-name "AWS-RunShellScript" \
+          --region ap-south-1 \
+          --instance-ids "{{ instance_results.results[1].instances[0].instance_id }}" \
+          --parameters 'commands=["sudo cat /var/lib/jenkins/secrets/initialAdminPassword"]' \
+          --output text
+      register: initial_admin_password
+
     - name: Output public IPs
       debug:
         msg:
           - "Salt Master: {{ master_result.instances[0].public_ip_address }}"
           - "Linux Minion: {{ instance_results.results[0].instances[0].public_ip_address }}"
-          - "Windows Minion: {{ instance_results.results[1].instances[0].public_ip_address }}"
+          - "Jenkins Minion: {{ instance_results.results[1].instances[0].public_ip_address }}"
+#          - "Windows Minion: {{ instance_results.results[2].instances[0].public_ip_address }}"
+
+    - name: Display Jenkins Credentials
+      ansible.builtin.debug:
+        msg: 
+          - "Jenkins URL: {{  instance_results.results[1].instances[0].public_dns_name }}:8080"
+          - "Password: {{ initial_admin_password }}"
