--- a/vars/cluster_vars.yml
+++ b/vars/cluster_vars.yml
@@ -5,10 +5,10 @@ security_group_ids: sg-02d290fb435aa47d1
 linux_instance_type: t2.micro
 linux_ami_id: ami-0d0ad8bb301edb745
 
-jenkins_instance_type: t3.small
-
-windows_instance_type: t3.micro
-windows_ami_id: ami-05b85154f69f6bcb3
+#jenkins_instance_type: t3.small
+#
+#windows_instance_type: t3.micro
+#windows_ami_id: ami-05b85154f69f6bcb3
 
 instances:
   - name: salt-master
@@ -16,19 +16,21 @@ instances:
     instance_type: "{{ linux_instance_type }}"
     ami_id: "{{ linux_ami_id }}"
     user_data: templates/linux_master.sh
+    count: 1
 
   - name: linux-minion
     role: salt-minion
     instance_type: "{{ linux_instance_type }}"
     ami_id: "{{ linux_ami_id }}"
     user_data_template: templates/linux_minion.sh.j2
+    count: 2
 
-  - name: jenkins-minion
-    role: salt-minion
-    instance_type: "{{ jenkins_instance_type }}"
-    ami_id: "{{ linux_ami_id }}"
-    user_data_template: templates/jenkins_minion.sh.j2
-
+#  - name: jenkins-minion
+#    role: salt-minion
+#    instance_type: "{{ jenkins_instance_type }}"
+#    ami_id: "{{ linux_ami_id }}"
+#    user_data_template: templates/jenkins_minion.sh.j2
+#
 #  - name: windows-minion
 #    role: salt-minion
 #    instance_type: "{{ windows_instance_type }}"
