--- a/launch-salt-cluster.yml
+++ b/launch-salt-cluster.yml
@@ -1,5 +1,6 @@
 ---
-- name: Launch Salt Master, Linux Minion, and Windows Minion EC2 Instances
+#- name: Launch Salt Master, Linux Minion, and Windows Minion EC2 Instances
+- name: Launch Salt Master (1), Linux Minion (2) EC2 Instances
   hosts: localhost
   gather_facts: false
 
@@ -16,9 +17,8 @@
         instance_type: "{{ linux_instance_type }}"
         image_id: "{{ instances[0].ami_id }}"
         wait: true
-        count: 1
+        count: "{{ instances[0].count }}"
         user_data: "{{ instances[0].user_data }}"
-        iam_instance_profile: EC2-SSM-role
         tags:
           Name: "{{ instances[0].name }}"
           Role: "{{ instances[0].role }}"
@@ -39,40 +39,16 @@
         instance_type: "{{ instance.instance_type }}"
         image_id: "{{ instance.ami_id }}"
         wait: true
-        count: 1
+        count: "{{ instance.count }}"
         user_data: "{{ lookup('template', instance.user_data_template) }}"
-        iam_instance_profile: EC2-SSM-role
         tags:
           Name: "{{ instance.name }}"
           Role: "{{ instance.role }}"
       register: instance_results
 
-    - name: Wait for Jenkins Instance to be accessible via SSM
-      ansible.builtin.wait_for:
-        host: "{{ instance_results.results[1].instances[0].public_dns_name }}"
-        port: 8080
-        state: started
-
-    - name: Retrieve initialAdminPassword via SSM
-      shell: |
-        aws ssm send-command \
-          --document-name "AWS-RunShellScript" \
-          --region ap-south-1 \
-          --instance-ids "{{ instance_results.results[1].instances[0].instance_id }}" \
-          --parameters 'commands=["sudo cat /var/lib/jenkins/secrets/initialAdminPassword"]' \
-          --output text
-      register: initial_admin_password
-
     - name: Output public IPs
       debug:
         msg:
           - "Salt Master: {{ master_result.instances[0].public_ip_address }}"
-          - "Linux Minion: {{ instance_results.results[0].instances[0].public_ip_address }}"
-          - "Jenkins Minion: {{ instance_results.results[1].instances[0].public_ip_address }}"
-#          - "Windows Minion: {{ instance_results.results[2].instances[0].public_ip_address }}"
-
-    - name: Display Jenkins Credentials
-      ansible.builtin.debug:
-        msg: 
-          - "Jenkins URL: {{  instance_results.results[1].instances[0].public_dns_name }}:8080"
-          - "Password: {{ initial_admin_password }}"
+          - "Linux Minion 1: {{ instance_results.results[0].instances[0].public_ip_address }}"
+          - "Linux Minion 2: {{ instance_results.results[1].instances[0].public_ip_address }}"
