--- a/vars/cluster_vars.yml
+++ b/vars/cluster_vars.yml
@@ -4,7 +4,7 @@ security_group_ids: sg-02d290fb435aa47d1
 
 linux_instance_type: t2.micro
 linux_ami_id: ami-0d0ad8bb301edb745
-
+sec_grp: sg-02d290fb435aa47d1
 #jenkins_instance_type: t3.small
 #
 #windows_instance_type: t3.micro
